--- a/src/NavbarAndHeader/Navbar.css
+++ b/src/NavbarAndHeader/Navbar.css
@@ -1,29 +1,36 @@
-.navbar2{
+.navbar2 {
     height: 42px;
     display: flex;
     align-items: center;
     border: 1px solid rgb(18, 44, 65);
 }
-.menu_bars-menuIcon{
-color: white;
+
+.menu_bars-menuIcon {
+    color: white;
 }
-.menu_barss{
+
+.menu_barss {
     display: flex;
 }
-.navbar2:hover{
+
+.navbar2:hover {
     border: 1px solid white;
 }
-.menu-bars{
+
+.menu-bars {
     margin-left: 2rem;
     font-size: 2rem;
     background: none;
 }
-ol, ul {
+
+ol,
+ul {
     padding-left: 0px;
 }
-.nav-menu{
+
+.nav-menu {
     z-index: 50;
-    overflow:scroll;
+    overflow: scroll;
     background-color: rgb(255, 255, 255);
     width: 400px;
     height: 100%;
@@ -35,16 +42,19 @@ ol, ul {
     transition: 580ms;
     overflow-x: hidden;
 }
-.nav-menu.active{
+
+.nav-menu.active {
     left: 0;
     transition: 350ms;
 }
-.nav-text{
+
+.nav-text {
     list-style: none;
     height: 50px;
 }
+
 .nav-text a {
-    color: rgba(17, 17, 17, 0.836);    
+    color: rgba(17, 17, 17, 0.836);
     text-decoration: none;
     font-size: 16px;
     width: 100%;
@@ -52,14 +62,17 @@ ol, ul {
     display: flex;
     margin-top: 15px;
     align-items: center;
-    font-family:"Amazon Ember",Arial,sans-serif;
+    font-family: "Amazon Ember", Arial, sans-serif;
 }
-.nav-text a:hover{
+
+.nav-text a:hover {
     background-color: rgba(235, 224, 224, 0.685);
 }
+
 .nav-menu-items {
     width: 100%;
 }
+
 .navbar-toggle {
     color: black;
     width: 100%;
@@ -69,14 +82,16 @@ ol, ul {
     bottom: 10px;
     left: 255px;
 }
-span{
+
+span {
     margin-left: 16px;
 }
-.nav-text2 a{
-    color:white;    
+
+.nav-text2 a {
+    color: white;
     text-decoration: none;
     font-size: 20px;
-    background-color:rgba(18, 35, 48, 0.842);
+    background-color: rgba(18, 35, 48, 0.842);
     font-weight: 800px;
     width: 100%;
     height: 100%;
@@ -84,20 +99,22 @@ span{
     align-items: center;
     margin-top: 15px;
     padding: 0 16px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-.nav-text2{
+
+.nav-text2 {
     display: flex;
     padding: 8px 0px 8px 16px;
     list-style: none;
     height: 70px;
     width: 230px;
 }
-.nav-text4 a{
-    color:rgba(22, 21, 21, 0.945);    
+
+.nav-text4 a {
+    color: rgba(22, 21, 21, 0.945);
     text-decoration: none;
     font-size: 20px;
-    font-weight:bolder;
+    font-weight: bolder;
     width: 100%;
     height: 100%;
     display: flex;
@@ -107,16 +124,18 @@ span{
     padding-bottom: 10px;
     border-top: 1px solid rgba(165, 157, 157, 0.795);
 }
-.nav-text4{
+
+.nav-text4 {
     display: flex;
     list-style: none;
     height: 60px;
 }
-.nav-text5 a{
-    color:rgba(22, 21, 21, 0.945);    
+
+.nav-text5 a {
+    color: rgba(22, 21, 21, 0.945);
     text-decoration: none;
     font-size: 20px;
-    font-weight:bolder;
+    font-weight: bolder;
     width: 100%;
     height: 100%;
     display: flex;
@@ -126,34 +145,40 @@ span{
     padding-bottom: 10px;
     border-top: 1px solid rgba(165, 157, 157, 0.795);
 }
-.nav-text5{
+
+.nav-text5 {
     display: flex;
     list-style: none;
     height: 60px;
     padding-bottom: 20px;
 }
-.all{
+
+.all {
     color: white;
     margin-left: 0px;
     font-size: 18px;
     font-weight: 600;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
 }
-.all:hover{
+
+.all:hover {
     color: white;
 }
-.header2{
+
+.header2 {
     display: flex;
     align-items: center;
     background-color: rgb(18, 44, 65);
 }
-.header_links{
+
+.header_links {
     display: flex;
     margin-left: 20px;
     align-items: center;
 }
-.headerLinksOption{
+
+.headerLinksOption {
     margin-right: 5px;
     text-decoration: none;
     color: white;
@@ -161,29 +186,36 @@ span{
     border: 1px solid rgb(18, 44, 65);
     padding: 5px;
 }
-.headerLinksOption:hover{
+
+.headerLinksOption:hover {
     border: 1px solid white;
     color: white;
 }
-.headerImg{
+
+.headerImg {
     height: 35px;
-    width:100%;
+    width: 100%;
 }
-                /*end media querry */
+
+/*end media querry */
 
 @media only screen and (max-width:992px) {
     .header_links {
         display: none;
     }
-    .headerImg{
+
+    .headerImg {
         display: none;
-        }
-    .nav-menu{
-        width:250px;
+    }
+
+    .nav-menu {
+        width: 250px;
         height: 100%;
     }
-    .navbar-toggle{
-        left:170px
+
+    .navbar-toggle {
+        left: 170px
     }
 }
-                /*end media querry */
+
+/*end media querry */
