--- a/src/NavbarAndHeader/Header.css
+++ b/src/NavbarAndHeader/Header.css
@@ -3,157 +3,203 @@
     background-color: white;
     margin-top: -15px;
 }
-.header{
+
+.header {
     display: flex;
     position: sticky;
     align-items: center;
     background-color: #131921;
 }
-.nav_left{
+
+.nav_left {
     display: flex;
     align-items: center;
     color: white;
     margin-top: -9px;
 }
-.nav_img{
+
+.nav_img {
     width: 100px;
     margin-top: 18px;
     margin-left: 20px;
     margin-right: 20px;
 }
-.nav_location{
+
+.nav_location {
     margin-top: 5px;
     display: flex;
     align-items: center;
-    border:1px  solid  #131921;
+    border: 1px solid #131921;
     padding-left: 5px;
     padding-top: 2px;
     margin-right: 10px;
 }
-.nav_location:hover{
+
+.nav_location:hover {
     border: 1px solid white;
 }
+
 .nav_location i {
     font-size: 15px;
     margin-right: 5px;
 }
-.nav_location h5{
+
+.nav_location h5 {
     margin-right: 10px;
     font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.nav_search{
+
+.nav_search {
     display: flex;
     flex: 100;
 }
+
 @media only screen and (max-width:992px) {
-    .nav_location{
+    .nav_location {
         margin-left: 5px;
         margin-right: 0px;
     }
-    .navbar-toggler-icon {
-    margin-left: -5px;
-    margin-top: 0px;
-    }
-}
-@media only screen and (max-width:768px) {
-.nav_location{
-    margin-left: 5px;
-    margin-right: 0px;
 
-}
     .navbar-toggler-icon {
-    margin-left: -5px;
-    margin-top: 0px;
-    }
-}
-@media only screen and (max-width:600px) {
-    .nav_location{
-        margin-left: -10px;
-        margin-right: 0px;
-    
-    }
-        .navbar-toggler-icon {
         margin-left: -5px;
         margin-top: 0px;
-        }
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .nav_location {
+        margin-left: 5px;
+        margin-right: 0px;
+
     }
 
-.searchInput{
-width: 100%;
-height: 30px;
-padding: 15px;
-border: none;
+    .navbar-toggler-icon {
+        margin-left: -5px;
+        margin-top: 0px;
+    }
 }
-.fa-magnifying-glass{
+
+@media only screen and (max-width:600px) {
+    .nav_location {
+        margin-left: -10px;
+        margin-right: 0px;
+
+    }
+
+    .navbar-toggler-icon {
+        margin-left: -5px;
+        margin-top: 0px;
+    }
+}
+
+.searchInput {
+    width: 100%;
+    height: 30px;
+    padding: 15px;
+    border: none;
+}
+
+.fa-magnifying-glass {
     background-color: #cd9042;
     height: 30px;
     padding: 10px;
 }
-.nav_options{
+
+.nav_options {
     display: flex;
     align-items: center;
 }
-.navOptionLinks{
+
+.navOptionLinks {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border:1px  solid  #131921;
+    border: 1px solid #131921;
     padding-left: 5px;
     padding-right: 5px;
     margin-left: 10px;
 }
-.navOptionLinks:hover{
+
+.navOptionLinks:hover {
     border: 1px solid white;
 }
-.navOptionLinksOne{
+
+.navOptionLinksOne {
     color: white;
     font-size: 10px;
-    border:1px  solid  #131921;
+    border: 1px solid #131921;
     text-align: none;
     text-decoration: none;
 }
-.navOptionLinksOne:hover{
+
+.navOptionLinksOne:hover {
     color: white;
 }
-.navOptionLinksOne{
+
+.navOptionLinksOne {
     color: white;
     font-size: 10px;
-    border:1px  solid  #131921;
+    border: 1px solid #131921;
     text-align: none;
 }
-.navOptionLinksTwo{
+
+.navOptionLinksTwo {
     color: white;
     text-decoration: none;
     font-size: 15px;
     font-weight: 800px;
 }
-.navOptionLinksTwo:hover{
+
+.navOptionLinksTwo:hover {
     color: white;
 }
-.cartOption{
+
+.cartOption {
     display: flex;
-    border:1px  solid  #131921;
+    border: 1px solid #131921;
     padding: 5px;
 }
-.cartOption:hover{
-    border:1px  solid  white;
+
+.cartOption:hover {
+    border: 1px solid white;
     padding: 5px;
 }
-.cartCount{
-color: rgb(250, 2, 2);
-position: relative;
-bottom: 10px;
-margin-left: 5px;
-margin-right:10px ;
-text-decoration: none;
+
+.cartCount {
+    color: rgb(250, 2, 2);
+    position: relative;
+    bottom: 10px;
+    margin-left: 5px;
+    margin-right: 10px;
+    text-decoration: none;
 }
-.cartCount:hover{
+
+.cartCount:hover {
     color: rgb(250, 2, 2);
     text-decoration: none;
-    }
-.fa-cart-shopping{
+}
+
+.fa-cart-shopping {
     color: white;
     text-decoration: none;
 }
+
+@media(max-width:1500px) {
+    .cart-phone {
+        display: none !important;
+    }
+}
+
+@media(max-width:576px) {
+    .cart-phone {
+        display: block !important;
+    }
+
+    .nav_location {
+        display: none;
+    }
+
+}
+
 /* end nav and Header */
